src/style.css
body {
    margin: 0px;
    background-color: lightgreen;
}

.mainPage {
    display: grid;
    grid-template-rows: 20vh 55vh 25vh;
}

.header {
    display: grid;
    grid-template-columns: repeat(2, 500px);
    grid-template-rows: 2fr 1fr;
    align-items: center;
    justify-items: center;
    justify-content: center;
    column-gap: 50px;
}

.banner {
    display: grid;
    grid-column-start: 1;
    grid-column-end: 3;
    align-items: center;
    justify-items: center;
    font-size: 50px;
}

.gameboardHeader {
    font-size: 30px;
}

.winner {
    font-size: xx-large;
    font-weight: bolder;
}

.gameboardSection {
    display: grid;
    grid-template-columns: 500px 500px;
    justify-content: center;
    align-items: center;
    gap: 50px;
}

.gameboard {
    display: grid;
    background-color: lightblue;
    height: 1fr;
    width: 1fr;
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: repeat(10, 1fr);
}

.cell {
    border: solid black 2px;
    width: 46px;
    height: 46px;
}

.emptyCell {
    background-color: lightblue;
}

.emptyHitCell {
    display: grid;
    justify-content: center;
    align-items: center;
}

.occupiedHitCell {
    display: grid;
    justify-content: center;
    align-items: center;
    background-color: red;
}

.occupiedCell {
    background-color: green;
    
}

.hitShip {
    background-color: red;
}

.shipOptions {
    display: grid;
    grid-auto-columns: 300px;
    grid-auto-flow: column;
    justify-content: center;
    align-items: center;
    justify-items: center;
}

.displayShip {
    display: grid;
    grid-auto-flow: column;  
}

.displayShip.vertical {
    grid-auto-flow: row;
    grid-template-rows: 50px;
}

.dropped {
    opacity: .5;
}

.displayShip.dragging {
    opacity: .5;
}

